--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,183 @@
 @import url('https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz,wght@16..144,100..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root {
+    --primary:#0F0F0F;
+    --secondary: #9400FF;
+    --bg:#050C9C
+} 
 /* css styles */
+body {
+    background-color: #ffffff;
+}
+
+/* header */
+header {
+    background-image: url(../img/bg.jpg);
+    height: 30rem;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+/* header nav */
+header .header-nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 2%;
+    align-items: center;
+}
+header .header-nav-list {
+    display: flex;
+    gap: 3rem;
+    font-size: 1.2rem;
+    font-family: 'Poppins';
+    flex: 2;
+}
+header .header-nav-list a {
+    text-decoration: none;
+    color: var(--primary);
+    font-weight: 600;
+}
+header .header-nav-list a::after {
+    content: '';
+    padding-bottom: .3rem;
+    border-bottom: 2px solid var(--primary);
+    display: block;
+    transform: scale(0);
+    transition: .3s linear;
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+    -webkit-transition: .3s linear;
+    -moz-transition: .3s linear;
+    -ms-transition: .3s linear;
+    -o-transition: .3s linear;
+}
+header .header-nav-list a:hover::after {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+}
+/* header tittle */
+header .header-nav-tittle {
+    font-size: 1.6rem;
+    color: var(--primary);
+    font-family: 'Montagu Slab';
+    flex: 2;
+}
+header .header-nav-tittle h1 {
+    font-style: italic;
+    font-weight: bold;
+}
+header .header-nav-tittle span {
+    color: var(--secondary);
+}
+
+/* header feather */
+header .header-nav-feather {
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+    margin-top: -.6rem;
+    flex: 2;
+    justify-content: end;
+} 
+header .header-nav-feather a {
+    color: #ffffff;
+    text-decoration: none;
+    font-size: .8rem;
+    border-radius: .4rem;
+    font-family: 'Poppins';
+    font-weight: 600;
+    padding: 1rem 2rem;
+    background-color: var(--secondary);
+    -webkit-border-radius: .4rem;
+    -moz-border-radius: .4rem;
+    -ms-border-radius: .4rem;
+    -o-border-radius: .4rem;
+}
+header .header-nav-feather a:active {
+    opacity: .5;
+}
+#menu {
+    display: none;
+}
+
+/* header content */
+header .header-content {
+   display: flex;
+   width: 70%;
+   height: 80%;
+   justify-content: flex-end;
+   align-items: center;
+   margin-left: 12rem;
+}
+header .header-content h1 {
+    font-size: 2rem;
+    width: 50%;
+    color: #ffffff;
+    font-family: 'Poppins';
+    font-weight: 200;
+    text-shadow: .1rem .1rem black;
+}
+
+/* header float */
+header .header-float {
+    width: 60%;
+    height: 20%;
+    display: flex;
+    align-items: center;
+    margin: -1.5rem  auto;
+    background-color: #ffffff;
+    border-radius: .4rem;
+    box-shadow: 0 0 .4rem .1rem #b8b3b3 ;
+    -webkit-border-radius: .4rem;
+    -moz-border-radius: .4rem;
+    -ms-border-radius: .4rem;
+    -o-border-radius: .4rem;
+}
+/* header card */
+header .header-float .header-float-content {
+    display: flex;
+    align-items: center;
+    gap: 5rem;
+    flex: 3;
+    margin-left: 1rem;
+}
+header .header-float .header-float-content .header-float-content-card h1 {
+    font-family: 'Poppins';
+    color: var(--primary);
+    font-size: 1rem;
+    font-weight: 400;
+}
+header .header-float .header-float-content .header-float-content-card h2 {
+    font-size: .8rem;
+    color: var(--primary);
+    font-weight: 100;
+    margin-top: 5px;
+}
+/* header float button */
+header .header-float-btn {
+    flex: 1;
+    text-align: center;
+}
+header .header-float-btn a {
+    padding: 1rem 2rem;
+    background-color: var(--secondary);
+    text-decoration: none;
+    color: #ffffff;
+    font-size: .8rem;
+    font-family: 'Poppins';
+    font-weight: 600;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+header .header-float-btn a:active {
+    background-color: #7c1ebe;
+} 
