--- a/css/styles.css
+++ b/css/styles.css
@@ -235,9 +235,13 @@ header .header-float-btn a:active {
     html {
         font-size: 80%;
     }
+    /* header navbar feather */
+    header .header-nav .header-nav-feather a{
+        padding: .6rem 1.2rem;
+    }
 
       /* header navbar float */
-      header .header-float {
+    header .header-float {
         width: 80%;
     }
     header .header-float .header-float-content {
@@ -253,6 +257,13 @@ header .header-float-btn a:active {
     }
     /* header float btn */
     header .header-float-btn a {
+        font-size: 100%;
+    }
+}
+
+/* desktop */
+@media screen and (min-width:992px) {
+    html {
         font-size: 100%;
     }
 }
