--- a/css/styles.css
+++ b/css/styles.css
@@ -265,10 +265,9 @@ section .header p {
 /* roadmap img */
 section .content {
     display: flex;
-    border: 1px solid;
 }
 section .content img {
-    width: 50%;
+    max-width: 50%;
     border-radius: .6rem;
     -webkit-border-radius: .6rem;
     -moz-border-radius: .6rem;
@@ -277,12 +276,47 @@ section .content img {
 }
 /* roadmap article */
 section .content .content-article {
-    margin-top: 1rem;
-    margin-left: 2rem;
+    margin: 2%;
 }
-/* roadmap content */
-section .content .content-article .content-article-1 {
+#article-mg {
+    margin-top: 2.8rem;
+}
+section .content .content-article .content-article-1{
     display: flex;
+    gap: 1rem;
+}
+/* roadmap article content */
+section .content .content-article .content-article-1 .content-article-num h1{
+    padding: .5rem;
+    border-radius: 50%;
+    font-size: 1.4rem;
+    border: 3px dotted rgb(34, 40, 49, .5);
+    font-weight: 400;
+    font-family: 'Open Sans';
+    color: #222831;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+section .content .content-article .content-article-1 .content-article-text h1{
+    color: #222831;
+    font-size: 1.2rem;
+    font-family: 'Poppins';
+    font-weight: 500;
+    margin-bottom: .2rem;
+}
+section .content .content-article .content-article-text p {
+    color: #222831;
+    font-size: 1rem;
+    font-family: 'Open Sans';
+    width: 95%;
+    text-align: left;
+    font-weight: 100;
+}
+#enjoy {
+    margin-top: .6rem;
+    color: #7c1ebe;
 }
 
 /* responsive */
