--- a/css/styles.css
+++ b/css/styles.css
@@ -93,6 +93,7 @@ header .header-nav-feather {
     justify-content: end;
 } 
 header .header-nav-feather a {
+    min-width: 10%;
     color: #ffffff;
     text-decoration: none;
     font-size: .8rem;
