--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ header .header-nav {
     padding: 1rem 2%;
     align-items: center;
 }
-/* header ist */
+/* header list */
 header .header-nav-list {
     display: flex;
     gap: 3rem;
